[gd_scene load_steps=4 format=3 uid="uid://coy0ma6cnnef8"]

[ext_resource type="Script" path="res://Scripts/QuestLog.gd" id="1_43fin"]

[sub_resource type="LabelSettings" id="LabelSettings_qnyl5"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_k2gdd"]

[node name="QuestLog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_43fin")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 575.0
offset_top = 150.0
offset_right = 615.0
offset_bottom = 190.0

[node name="QuestContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="QuestName" type="Label" parent="VBoxContainer/QuestContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_qnyl5")

[node name="QuestStep" type="Label" parent="VBoxContainer/QuestContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_k2gdd")
